--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -14,7 +14,7 @@
   padding: 0;
 }
 
-button, a, input[type="text"], textarea, li{
+button, a, input[type="text"], textarea{
   min-width: 44px;
   min-height: 44px;
 }
@@ -113,9 +113,9 @@ header{
 }
 
 #top-bar nav ul li a{
-  display: inline-block;
+  display: flex;
+  align-items: center;
   text-decoration: none;
-  min-height: 44px;
   color: var(--paragraph-text);
 }
 
@@ -278,10 +278,6 @@ footer{
 
 
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
-  button, a, input[type="text"], textarea, li{
-    min-width: 44px;
-    min-height: 44px;
-  }
 
   #restaurant-list{
     grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -304,10 +300,6 @@ footer{
 }
 
 @media only screen and (min-width: 1024px) {
-  button, a, input[type="text"], textarea, li{
-    min-width: 44px;
-    min-height: 44px;
-  }
 
   #restaurant-list{
     grid-template-columns: repeat(3, minmax(0, 1fr));
